# MCP_server

./: .gitignore  Dockerfile  README.md  config.toml.example  docker-compose.yml  package-lock.json  pyproject.toml
.claude/commands/: create-presentation.md
deploy/: install-systemd.sh  mcp-server.service
scripts/: download_lucide_icons.py  download_pptxgenjs.py  generate_pptx.js  install_offline.ps1  pack_offline.ps1  setup_presentation.ps1
src/mcp_server/: config.py  server.py
src/mcp_server/tools/: api.py  custom.py  database.py  filesystem.py  gms.py  presentation.py
src/mcp_server/utils/: errors.py  logging.py
